# fantasypl

./: .gitignore  README.md  mypy.ini  pyproject.toml  ruff.toml
src/fantasypl/: __init__.py
src/fantasypl/config/constants/: __init__.py  folder_config.py  image_config.py  mapping_config.py  modeling_config.py  prediction_config.py  web_config.py
src/fantasypl/config/models/: element_mixin.py  player.py  player_gameweek.py  season.py  team.py  team_gameweek.py
src/fantasypl/config/references/: __init__.py  player_refs.py  team_refs.py
src/fantasypl/config/schemas/: __init__.py  element.py  player.py  player_gameweek.py  season.py  team.py  team_gameweek.py
src/fantasypl/core/fetch/: get_fbref_match_links.py  get_fbref_matches.py  get_fbref_player_last_season.py  get_fbref_team_last_season.py  get_fbref_team_matchlogs.py  get_fbref_teams.py  get_formation_last_season.py  get_fpl_bootstrap.py  get_fpl_player_pics.py  get_fpl_shirts.py  get_fpl_team_data.py
src/fantasypl/core/predict/: calc_gameweek_final_predictions.py  calc_gameweek_matches.py  calc_gameweek_xpoints.py  calc_predict_player_features.py  calc_predict_team_features.py  find_optimal_squad.py  find_optimal_transfers.py  predict_for_gameweek.py  process_last_season_averages.py  process_last_season_player_averages.py  process_last_season_team_averages.py
src/fantasypl/core/process/: process_refs_player.py  process_refs_team.py  save_fbref_agg_player_matchlogs.py  (+2 more)
src/fantasypl/utils/: __init__.py  image_helper.py  modeling_helper.py  prediction_helper.py  save_helper.py  web_helper.py
(+6 files in other folders)
