[project]
name = "fantasypl"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.1",
    "ruff-lsp>=0.0.55",
    "pydantic>=2.8.2",
    "pandas>=2.2.2",
    "pandas-stubs>=2.2.2.240807",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20240712",
    "rich>=13.7.1",
    "mypy>=1.11.1",
    "lxml>=5.3.0",
    "cssselect>=1.2.0",
    "loguru>=0.7.2",
    "lxml-stubs>=0.5.1",
    "scikit-learn>=1.5.1",
    "flaml[automl]>=2.2.0",
    "pip>=24.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
