[project]
name = "fantasypl"
version = "0.1.0"
description = "Fetches data, builds features, trains model, and optimizes team for Fantasy Premier League."
readme = "README.md"
target-version = "py312"
requires-python = ">=3.12"
dependencies = [
    "ruff>=0.6.1",
    "ruff-lsp>=0.0.55",
    "pydantic>=2.8.2",
    "mypy>=1.11.1",
    "pandas>=2.2.2",
    "pandas-stubs>=2.2.2.240807",
    "requests>=2.32.3",
    "types-requests>=2.32.0.20240712",
    "lxml>=5.3.0",
    "lxml-stubs>=0.5.1",
    "cssselect>=1.2.0",
    "rich>=13.7.1",
    "loguru>=0.7.2",
    "flaml[automl]>=2.2.0",
    "pip>=24.2",
    "pulp>=2.9.0",
    "scikit-learn>=1.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
